<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>graphslam_scan_matcher</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="ros@todo.todo">ros</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- packages -->
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>ndt_omp</depend>
    <depend>fast_gicp</depend>
    <!-- msg packages -->
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <!-- graphslam packages -->
    <depend>graphslam_utils</depend>
    <depend>graphslam_msgs</depend>

    <exec_depend>launch_ros</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
