<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>graphslam_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>gtsam</depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_sensor_msgs</depend>

  <depend>graphslam_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
